# picosdk-minimal-setup

./: CMakeLists.txt
src/: main.c
